--- a/view/index.html
+++ b/view/index.html
@@ -21,6 +21,11 @@
 	
 	.botao-findAll {
 		margin-top: 30px;
+		background-color: #ffd966;
+		border-radius: 5px;
+		width: 140px;
+		height: 35px;
+		font-weight: bold;
 	}
 
 	.tabela tr td{
@@ -33,9 +38,15 @@
 		width: 70px;
 		vertical-align: middle;
 	}
+	
 	.clear {
 	  clear: both;
 	}
+	
+	table tr:nth-child(odd) {
+		background: #ffffcc;
+	}
+	
 	</style>
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -49,7 +60,7 @@
 	
 	<script type="text/javascript">
   
-		var server = "http://localhost:8082/treinamento/api/v1"
+		/*var server = "http://localhost:8082/treinamento/api/v1"
 		var link = server+"/marvel";	
         function ConsultarPersonagens() {					
 			$.ajax({			
@@ -60,12 +71,17 @@
 				error: function() { alert('Failed!'); }, 
 				
 			});
-		}	
+		}	*/
+		
+		var api_key_ts_hash = 'apikey=d179a68123c002407553b99139d00ecd&ts=1552354601050&hash=5ed4bbd16b6449101a53bcf87eddf66a'
+		var api_character = 'http://gateway.marvel.com/v1/public/characters?'+api_key_ts_hash;	
 
 		var app = angular.module('tabelaEstagio', ['angularUtils.directives.dirPagination']);
 
 		app.controller('estagioController', function($scope, estagioService){
 
+			$scope.form = [];
+		
 			$scope.findAll = function (){				
 				estagioService.findAll(function(erro, status, body){
 					$scope.lista = body.data.results;
@@ -73,8 +89,11 @@
 			};
 			
 			$scope.findByName = function (){
-				console.log("entrou findByName");			
-			};
+				estagioService.findByName($scope.form.buscaNome, function(erro, status, body){
+					$scope.lista = body.data ? body.data.results : [];
+				});
+			}
+		
 			
 		});
 
@@ -90,9 +109,19 @@
 			};
 			
 			this.findAll = function (callback){
-				$http.get('http://localhost:8082/treinamento/api/v1/marvel')
+				$http.get(api_character+'&limit=100')
 				.then(CallbackRequest.bind(this, callback),
 					CallbackRequest.bind(this, callback));
+			};
+			
+			this.findByName = function (nome, callback){
+				if(nome){
+					$http.get(api_character+'&limit=100'+'&nameStartsWith='+nome)
+					.then(CallbackRequest.bind(this, callback),
+						CallbackRequest.bind(this, callback));
+				} else {
+					this.findAll(callback);
+				}
 			}
 				
 		});
@@ -104,7 +133,7 @@
 <body>
 	<div id="tabela-lista-personagem" class="content" ng-controller="estagioController as controller">	
 		<label> 				
-			<input placeholder="Buscar por nome" ng-model="buscaNome" type="text" name="nome" id="nome" maxlength="50"/>  			
+			<input placeholder="Buscar por nome" ng-change="findByName()" ng-model="form.buscaNome" type="text" name="nome" id="nome" maxlength="50"/>  			
 		</label>
 		<input type="button" class="botao-findAll" value="Atualizar Lista"  ng-click="findAll()"/>
 		<table class="tabela">
@@ -113,8 +142,8 @@
 				<th class="largura-fixa300" >Nome</th>
 				<th class="largura-fixa300" >Descrição</th>
 			</tr>
-			<tr dir-paginate="item in lista|filter:{name:buscaNome}|itemsPerPage:5">
-				<td><img class="imagem-personagem " src="{{item.thumbnail.path}}.{{item.thumbnail.extension}}"<td>
+			<tr dir-paginate="item in lista|itemsPerPage:5">
+				<td><img class="imagem-personagem " ng-src="{{item.thumbnail.path}}.{{item.thumbnail.extension}}"<td>
 				<td>{{item.name}}</td>
 				<td>{{item.description}}</td>
 			<tr>
